# Linux-Client-Server-Group-Chat

./: CMakeLists.txt  README.md  client.cpp  client.h  guide.txt  main_client.cpp  main_client.sh  main_server.cpp  main_server.sh  server.cpp  server.h  test_client.cpp  test_client.sh  test_server.cpp  test_server.sh
docker/: Dockerfile  docker-compose.yml
